# cplusplus-demo-code

./: readme.md
001-CommandModelFactory/: CMakeLists.txt
001-CommandModelFactory/include/: model_a.h  model_b.h  model_c.h  model_d.h  model_factory.h  testclass.h
001-CommandModelFactory/src/: main.cpp  model_a.cpp  model_b.cpp  model_c.cpp  model_d.cpp  model_factory.cpp
002-FileMonitorSystem/: CMakeLists.txt
002-FileMonitorSystem/client/: CMakeLists.txt
002-FileMonitorSystem/client/include/: ClientHandler.hpp
002-FileMonitorSystem/client/src/: ClientHandler.cpp  main.cpp
002-FileMonitorSystem/common/include/: Protocol.hpp
002-FileMonitorSystem/server/: CMakeLists.txt
002-FileMonitorSystem/server/configs/: app.json
002-FileMonitorSystem/server/include/: FileWatcher.hpp  IPCManager.hpp
002-FileMonitorSystem/server/src/: FileWatcher.cpp  IPCManager.cpp  SubscriptionManager.cpp  main.cpp
01-CommandModelFactory/: CMakeLists.txt  readme.md
01-CommandModelFactory/include/: model_b.h  model_c.h  model_d.h
01-CommandModelFactory/src/: model_b.cpp  model_c.cpp  model_factory.cpp  testclass.cpp
02-FileMonitorSystem/: readme.md
02-FileMonitorSystem/client/src/: ClientHandler.cpp  main.cpp
02-FileMonitorSystem/server/: CMakeLists.txt
02-FileMonitorSystem/server/include/: AuthManager.hpp  IPCManager.hpp
02-FileMonitorSystem/server/src/: AuthManager.cpp  IPCManager.cpp  main.cpp
03-AStarDemo/: CMakeLists.txt  main.cpp
03-AStarDemo/include/: AStar.hpp  MapInfo.hpp  OpenCVProcessor.hpp
03-AStarDemo/src/: AStar.cpp  OpenCVProcessor.cpp  main.cpp
04-googletest/: CMakeLists.txt  readme.md
04-googletest/src/: math_demo.cpp  math_utils.cpp  math_utils.h  test_utils.cpp  test_utils.h
04-googletest/test/: gtest_demo.cpp  math_utils_test.cpp
04-googletest/test_libs/inc/: json.h  log.h
05-SignalsAndSlots/: CMakeLists.txt  main.cpp  readme.md  signal.hpp
06-message_bus/: README.md
06-message_bus/message_bus/: message_bus.cpp  message_bus.h  timer.hpp
07-Compilation_Linking/: main.cpp  readme.md
08-Dynamic_Loading/: main.cpp  readme.md
09-Plugin_Framework_C/: main.c  readme.md
10-Plugin_Framework_Plus_C/: data_processor.c  data_sender.c  data_view.c  libconfig.json  main.c  make.sh  readme.md
11-Dyna_Nodelet/: Makefile  README.md  alert_nodelet.cpp  nodelet_base.hpp  plugin_loader.cpp  run.sh
12-Dyna_Nodelet_Plus/: Makefile  README.md  alert_nodelet.cpp  job_nodelet.cpp  jobexecutor.cpp  jobexecutor.hpp  jobexecutor_interface.hpp  message_pub.cpp  message_pub.hpp  nodelet_base.hpp  plugin_loader.cpp  plugins_config.json  run.sh
13-Timer/: CMakeLists.txt  main.cpp  timer.cpp  timer.hpp
14-thread_msg_queue_C/: CMakeLists.txt  readme.md  thread_msg_queue.c
15-IPC_sysv/: CMakeLists.txt  msg_consumer.cpp  msg_producer.cpp  readme.md  sysv_msg_common.h
15-IPC_sysv/sysv_msg_queue/: Makefile  sysv_msg_queue.c
16-libversion/: readme.md
16-libversion/app/: main.c  readme.md
16-libversion/exec/: readme.md
16-libversion/lib_1.0.0/: math.c  math.h  readme.md
16-libversion/lib_1.1.0/: math.c  math.h  readme.md
16-libversion/lib_2.0.0/: math.c  math.h  readme.md
17-backward_cpp/: CMakeLists.txt  readme.md  rectrace_main.cpp  select_signals_main.cpp  stacktrace_main.cpp
18-backward_cpp_lite/: CMakeLists.txt  backward.hpp  main.cpp  readme.md
19-DispatchLite/: CMakeLists.txt  main.cpp  readme.md
